# nakatoshi

./: Cargo.toml  README.md  sample.txt
.github/workflows/: rust.yml
src/: address.rs  cli.rs  main.rs
