[package]
name = "nakatoshi"
version = "0.2.5"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
edition = "2018"
description = "Groestlcoin vanity address generator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Groestlcoin/nakatoshi"
repository = "https://github.com/Groestlcoin/nakatoshi"
keywords = ["groestlcoin", "address", "vanity", "vanity-address"]
categories = ["command-line-utilities"]

[dependencies]
clap = "3.1.6"
groestlcoin = "0.27.1"
time = "0.3.7"
rayon = "1.5.1"
getrandom = "0.2.5"
serde = "1.0.136"
serde_json = "1.0.79"
spinners = "3.0.1"
num_cpus = "1.13.1"
indicatif = "0.16.2"
